--- a/DemoMVC/appsettings.json
+++ b/DemoMVC/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ApplicationDbContext": "Data Source=DemoMvc.db"
+    "ApplicationDbContext": "Data Source=App.db"
   }
 }
